--- a/src/vehiculo/listar-vehiculo/listar-vehiculo.component.html
+++ b/src/vehiculo/listar-vehiculo/listar-vehiculo.component.html
@@ -34,6 +34,12 @@
     </tbody>
   </table>
 
+  <div class="container-md">
+    <p>Total Renault: {{ totalRenault }}</p>
+    <p>Total Chevrolet: {{ totalChevrolet }}</p>
+    <p>Total Nissan: {{ totalNissan }}</p>
+  </div>
+
 </div>
 
 <footer class="footer text-center mt-5">
